<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context="com.example.petstate.security.Login">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.github.siyamed.shapeimageview.RoundedImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:src="@drawable/alvan_nee_t_0ew_sebse_unsplash"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:siRadius="30dp"
                app:siSquare="true" />


            <TextView
                android:id="@+id/hveAccount"
                android:layout_width="242dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/already_have_an_account"
                android:textColor="#00838F"
                android:textColorLink="#00BCD4"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menus"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="user type"
                app:startIconDrawable="@drawable/ic_person">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/button"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputmail"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"
                android:hint="@string/email"
                app:boxBackgroundColor="#00FFFFFF"
                app:boxBackgroundMode="outline"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hveAccount"
                app:startIconContentDescription="Email"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputemail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/button"
                    android:imeOptions="flagNoPersonalizedLearning"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputpasswor"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"
                android:hint="@string/password"
                app:boxBackgroundColor="#00FFFFFF"
                app:boxBackgroundMode="outline"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:counterTextColor="@color/purple_200"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:helperText="don't use very long passwords"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputmail"
                app:startIconContentDescription="password"
                app:startIconDrawable="@drawable/lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/button"
                    android:imeOptions="flagNoPersonalizedLearning"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="199dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:background="@drawable/buttonnext"
                android:backgroundTint="@color/colorAccent"
                android:clickable="false"
                android:focusable="true"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:backgroundTint="#00BCD4"
                app:cornerRadius="50dp"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/fogtPwd"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="#00838F"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            <TextView
                android:id="@+id/register"
                android:layout_width="60dp"
                android:layout_height="27dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/new_user_register_now"
                android:textColor="#00838F"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.483"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fogtPwd" />

        </LinearLayout>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
